<resources>
    <string name="app_name">Login using shared preferences</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_register_here">Don\'t have an account yet? <i><u>Register here</u></i></string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">register</string>
    <string name="welcome_to_please_login_to_your_account">Lorem Ipsum neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>
    <string name="company_logo">company logo</string>
    <string name="jina">jina</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="fname_error">Enter first name</string>
    <string name="sname_error">Enter second name</string>
    <string name="username_error">Enter username</string>
    <string name="email_error">Enter e-mail</string>
    <string name="password_error">Enter password</string>
    <string name="confirm_password_error">Confirm password</string>
</resources>